test/lit/pto/tpush_tpop_globaltensor_entry_mismatch_invalid.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

module {
  func.func @cube_globaltensor_mismatch(
      %gm_slots : !pto.tensor_view<16x16xf32>)
      attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %pipe = "pto.initialize_l2g2l_pipe"(%gm_slots) <{
      dir_mask = 1 : i8,
      slot_size = 1024 : i32,
      slot_num = 8 : i32,
      flag_base = 0 : i32,
      operandSegmentSizes = array<i32: 1, 0, 0>
    }> : (!pto.tensor_view<16x16xf32>) -> !pto.pipe

    %entry = pto.declare_global -> !pto.tensor_view<16x32xf32>
    pto.talloc(%entry, %pipe : !pto.tensor_view<16x32xf32>, !pto.pipe) {split = 0}
    func.return
  }
}

// CHECK: error: 'pto.talloc' op expects pipe entry dimension 1 to match initialize_l2g2l_pipe gm_addr dimension 16
